Fixed width-issue on output where some content might go out of view.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,6 @@
 .output pre {
 	margin: 0px;
 	padding: 5px;
-	width: 100%;
 }
 
 pre {
